[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "regentclaw-cli"
version         = "0.2.0"
description     = "RegentClaw Zero Trust Ecosystem — Command Line Interface"
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "Proprietary" }
authors         = [{ name = "Ascend Technologies" }]

dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.27",
]

[project.scripts]
regentclaw = "regentclaw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["regentclaw*"]
